# screws_bolts_detector

./: .gitignore  CMakeLists.txt  ObjectClassificationSRS.odt  README.md  main.cpp
class_templates/: AListADT.hpp  CMakeLists.txt  KVPair.hpp  UALDict.hpp  empty_src.cpp
include/: AListADT.hpp  DictionaryADT.hpp  Error.hpp  ErrorsReport.hpp  ImageExtractFeatures.hpp  ImagePreprocessing.hpp  ImageSegmentation.hpp  KVPair.hpp  ListADT.hpp  MultipleImageWindow.h  TrainingAndTesting.hpp  UALDict.hpp
reports/reports_templates/: system_startup_report.html
src/: AListADT.cpp  CMakeLists.txt  Error.cpp  ImageExtractFeatures.cpp  ImagePreprocessing.cpp  ImageSegmentation.cpp  MultipleImageWindow.cpp  TrainingAndTesting.cpp
tests/: AListADTTest.hpp  CMakeLists.txt  run_tests.cpp
tests/class_templates/: CMakeLists.txt
tests/include/: AListADTTest.hpp  Payroll.hpp  UALDictTest.hpp
tests/src/: AListADTTest.cpp  CMakeLists.txt  UALDictTest.cpp
