CMAKE_MINIMUM_REQUIRED (VERSION 3.22)
CMAKE_POLICY (SET CMP0012 NEW)
PROJECT(Object_Classification)
FIND_PACKAGE(OpenCV 4.4.0 REQUIRED)
MESSAGE ("OpenCV Version: ${OpenCV_VERSION}")
INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRS})
MESSAGE ("OpenCV include: ${OpenCV_INCLUDE_DIRS}")
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)
ADD_SUBDIRECTORY(src)
SET(EXTRA_LIBS ${OpenCV_LIBS} training_and_testing image_extract_features image_segmentation image_preprocessing multiple_image_window)
ADD_EXECUTABLE(${PROJECT_NAME} main.cpp)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${EXTRA_LIBS})
